test/test_examples/syntactic_examples/syntax_error/error_fun_def_04.zig
// Syntax error: keyword instead of identifier

const ifj = @import("ifj24.zig"); 

pub fn ifj() void {

}  